# bitbuffet-clients

./: .gitignore  README.md
apps/node/: .gitignore  LICENSE  README.md  package.json  tsconfig.json
apps/node/src/: bitbuffet.ts  index.ts  scraper.ts
apps/node/src/schemas/: article.ts  recipe.ts
apps/node/tests/: client.ts  integration.test.ts  scraper.test.ts
apps/python/: README.md  pyproject.toml
apps/python/bitbuffet/: __init__.py  scraper.py
apps/python/src/: scraper.py
apps/python/tests/: article_schema.py  client.py  conftest.py  recipe_schema.py  test_client_integration.py  test_client_unit.py
apps/python/tests/schemas/: recipe_schema.py
