[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitbuffet"
version = "1.0.0"
description = "Python SDK for the bitbuffet API - BitBuffet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Yuliyan Stefanov", email = "ystefanov.dev@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["scraper", "api", "client", "web-scraping", "structured-data", "ai"]
license = {text = "MIT"}
dependencies = [
    "build>=1.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/ystefanov6/bitbuffet-clients"
Repository = "https://github.com/ystefanov6/bitbuffet-clients"
Documentation = "https://github.com/ystefanov6/bitbuffet-clients#readme"
"Bug Tracker" = "https://github.com/ystefanov6/bitbuffet-clients/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["bitbuffet"]
